# clog

./: .gitattributes  Makefile.in  clog.h  compile_flags.txt  configure  configure.ac  kadmos.h  main.c  meson.build
config/: config.h
core/: logger.c  logger.h
lib/: README
src/: Makefile.am  Makefile.in  clog.c  clog.h  config.h  logger.c  logger.h  meson.build
src/config/: README
tests/: Makefile.am  Makefile.in  main.c  meson.build  test_utils.c  test_utils.h
